# wordle-solver

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/wordle_solver/: cli.py  solver.py
tests/: test_cli.py  test_solver.py
